@@ -161,6 +161,8 @@ CVS code -
 	- Only include this function when DISABLE_SPELLER isn't defined,
 	  as the alternate spell checking code is now the only place
 	  where it's used. (DLR)
+  find_history(), get_history_completion()
+	- Make parameters const where possible. (DLR)
 - winio.c:
   edit_redraw(), edit_refresh()
 	- Clean up and simplify. (DLR)
